fixed left alignment of information h2 on homepage

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -331,7 +331,7 @@ h4 {
     border: 0;
     border-top: .5px solid #F5F5F5;
   }
-  .contact a:hover {
+  .info a:hover {
     background-color:yellow;
     color: black;
     text-decoration: none;
@@ -366,23 +366,23 @@ h4 {
   .hero-img img {
     margin-top:2.5em;
   }
-  .info h2{
+  .contact h2{
     text-align:center;
     line-height:2rem;
     margin:auto;
     width:75%;
   }
-  .info h4{
+  .info h3 {
+    line-height: 1.8rem;
+  }
+  .contact h4{
     text-align:center;
     line-height:2rem;
     margin:auto;
     width:70%;
   }
-  .info .images {
+  .contact .images {
     margin: auto;
-  }
-  .info h3 {
-    line-height: 1.8rem;
   }
   .navbar-brand {
     padding-left:20px;
